syntax = "proto3";

package comment.v1;
option go_package = "comment/v1;commentv1";

import "google/protobuf/timestamp.proto";

service CommentService {
  // GetCommentList Comment的id为0 获取一级评论
  rpc GetCommentList(GetCommentListRequest) returns (GetCommentListResponse);
  // DeleteComment 删除评论及其子评论
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  // CreateComment 创建评论
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  // GetMoreReplies 获取更多回复
  rpc GetMoreReplies(GetMoreRepliesRequest) returns (GetMoreRepliesResponse);
}

message GetCommentListRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 min_id = 3;
  int64  limit = 4;
}

message GetCommentListResponse {
  repeated Comment comments = 1;
}

message Comment {
  int64 id = 1;
  int64 uid = 2;
  string biz = 3;
  int64 biz_id = 4;
  string content = 5;
  Comment root_comment = 6;
  Comment parent_comment = 7;

  // 如果不想用 int64 之类的, 就可以考虑使用这个 Timestamp
  google.protobuf.Timestamp ctime = 9;
  google.protobuf.Timestamp utime = 10;
}

message DeleteCommentRequest {
  int64 id = 1;
}

message DeleteCommentResponse {
}

message CreateCommentRequest {
  Comment comment = 1;
}

message CreateCommentResponse {

}

message GetMoreRepliesRequest {
  int64 rid = 1;
  int64 max_id = 2;
  int64 limit = 3;
}

message GetMoreRepliesResponse {
  repeated Comment comments = 1;
}